# AxaPricingApp

./: .gitignore  Makefile  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/src/axa_pricing_app/: __init__.py  app.py  models.py  routes.py
frontend/: Dockerfile  index.html  package.json
frontend/src/: App.jsx  main.jsx  theme.js
frontend/src/components/: Navbar.jsx
frontend/src/pages/: Home.jsx  NewQuote.jsx
